--- a/ViralLoopYT.ipynb
+++ b/ViralLoopYT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnyyfm8wHsf+5xChW4LeGn",
+      "authorship_tag": "ABX9TyPg7FwAuGab4dZidPXYjO5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GKTeHaJxp3MM",
-        "outputId": "0bdeafb8-c070-4b47-e2c1-58c167988b68",
+        "outputId": "2a2e0aab-53e4-4c12-aa73-57045dae3451",
         "collapsed": true
       },
       "outputs": [
@@ -47,28 +47,14 @@
             "Reading state information... Done\n",
             "ffmpeg is already the newest version (7:4.4.2-0ubuntu0.22.04.1).\n",
             "0 upgraded, 0 newly installed, 0 to remove and 1 not upgraded.\n",
-            "Collecting instaloader\n",
-            "  Downloading instaloader-4.15-py3-none-any.whl.metadata (6.8 kB)\n",
+            "Requirement already satisfied: instaloader in /usr/local/lib/python3.12/dist-packages (4.15)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (2.32.4)\n",
-            "Collecting gtts\n",
-            "  Downloading gTTS-2.5.4-py3-none-any.whl.metadata (4.1 kB)\n",
+            "Requirement already satisfied: gtts in /usr/local/lib/python3.12/dist-packages (2.5.4)\n",
             "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests) (3.4.4)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests) (3.11)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests) (2.5.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests) (2025.11.12)\n",
-            "Collecting click<8.2,>=7.1 (from gtts)\n",
-            "  Downloading click-8.1.8-py3-none-any.whl.metadata (2.3 kB)\n",
-            "Downloading instaloader-4.15-py3-none-any.whl (68 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.3/68.3 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading gTTS-2.5.4-py3-none-any.whl (29 kB)\n",
-            "Downloading click-8.1.8-py3-none-any.whl (98 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.2/98.2 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: click, instaloader, gtts\n",
-            "  Attempting uninstall: click\n",
-            "    Found existing installation: click 8.3.1\n",
-            "    Uninstalling click-8.3.1:\n",
-            "      Successfully uninstalled click-8.3.1\n",
-            "Successfully installed click-8.1.8 gtts-2.5.4 instaloader-4.15\n"
+            "Requirement already satisfied: click<8.2,>=7.1 in /usr/local/lib/python3.12/dist-packages (from gtts) (8.1.8)\n"
           ]
         }
       ],
@@ -83,6 +69,41 @@
       "metadata": {
         "id": "_L5qU1Ji9_A1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import urllib.parse\n",
+        "import os\n",
+        "\n",
+        "# Check if running in Colab or GitHub Actions\n",
+        "try:\n",
+        "    from google.colab import userdata\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "# Get credentials based on environment\n",
+        "if IN_COLAB:\n",
+        "    REDIS_URL = userdata.get(\"UPSTASH_REDIS_REST_URL\")\n",
+        "    REDIS_TOKEN = userdata.get(\"UPSTASH_REDIS_REST_TOKEN\")\n",
+        "    HF_TOKEN = userdata.get('HF_TOKEN')\n",
+        "    client_secret = userdata.get(\"YT_CLIENT_SECRET\")\n",
+        "    token_secret = userdata.get(\"YT_TOKEN\")\n",
+        "else:\n",
+        "    # Running in GitHub Actions or locally\n",
+        "    REDIS_URL = os.environ.get(\"UPSTASH_REDIS_REST_URL\")\n",
+        "    REDIS_TOKEN = os.environ.get(\"UPSTASH_REDIS_REST_TOKEN\")\n",
+        "    HF_TOKEN = os.environ.get('HF_TOKEN')\n",
+        "    client_secret = os.environ.get(\"YT_CLIENT_SECRET\")\n",
+        "    token_secret = os.environ.get(\"YT_TOKEN\")"
+      ],
+      "metadata": {
+        "id": "vKg7oiPK3Cq2"
+      },
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -119,7 +140,7 @@
       "metadata": {
         "id": "7nUFsvI33emI"
       },
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -127,10 +148,10 @@
       "source": [
         "import requests\n",
         "import urllib.parse\n",
-        "from google.colab import userdata\n",
+        "#from google.colab import userdata\n",
         "\n",
-        "REDIS_URL = userdata.get(\"UPSTASH_REDIS_REST_URL\")\n",
-        "REDIS_TOKEN = userdata.get(\"UPSTASH_REDIS_REST_TOKEN\")\n",
+        "# REDIS_URL = userdata.get(\"UPSTASH_REDIS_REST_URL\")\n",
+        "# REDIS_TOKEN = userdata.get(\"UPSTASH_REDIS_REST_TOKEN\")\n",
         "\n",
         "if not REDIS_URL or not REDIS_TOKEN:\n",
         "    raise Exception(\"❌ Missing Redis secrets\")\n",
@@ -172,7 +193,7 @@
       "metadata": {
         "id": "lCSRNANqsRm9"
       },
-      "execution_count": 9,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -204,7 +225,7 @@
       "metadata": {
         "id": "kjlr3nT38l-D"
       },
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -323,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrBuFNVJrVQ_",
-        "outputId": "d31123ba-1b61-448a-ad7d-77efce825130"
+        "outputId": "598b33d0-d851-479c-d1b1-713739035146"
       },
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,13 +366,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧠 Redis check DSuoFudCC92: 0\n",
-            "🎯 Selected NEW reel: DSuoFudCC92\n",
-            "[Why do kids hate green food?!…] reels/2025-12-26_13-35-44_UTC.mp4 \n",
-            "✅ Caption saved as: caption_20260107_135930.txt\n",
-            "🧠 Saved reel ID to Redis: DSuoFudCC92\n",
-            "Downloaded ONE video: reels/reel_20260107_135930.mp4\n",
-            "Reel duration: 68.17 seconds\n"
+            "🧠 Redis check DSmeIwbCNoa: 1\n",
+            "⏭️ Skipping already uploaded reel: DSmeIwbCNoa\n",
+            "🧠 Redis check DSrVu0fiBWA: 1\n",
+            "⏭️ Skipping already uploaded reel: DSrVu0fiBWA\n",
+            "🧠 Redis check DSfPcT_DKvU: 0\n",
+            "🎯 Selected NEW reel: DSfPcT_DKvU\n",
+            "[Fueling festive play with car…] reels/2025-12-20_14-11-45_UTC.mp4 \n",
+            "✅ Caption saved as: caption_20260107_143208.txt\n",
+            "🧠 Saved reel ID to Redis: DSfPcT_DKvU\n",
+            "Downloaded ONE video: reels/reel_20260107_143208.mp4\n",
+            "Reel duration: 32.23 seconds\n"
           ]
         }
       ]
@@ -359,13 +384,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import userdata\n",
-        "HF_TOKEN = userdata.get('HF_TOKEN')"
+        "# from google.colab import userdata\n",
+        "# HF_TOKEN = userdata.get('HF_TOKEN')"
       ],
       "metadata": {
         "id": "_U2Vw_PcpWgN"
       },
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -423,7 +448,7 @@
       "metadata": {
         "id": "vTPOA4ch0VlY"
       },
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -554,7 +579,7 @@
       "metadata": {
         "id": "GVvo0Gxf0goW"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -623,9 +648,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c0336cc-7e2e-4746-8bba-f85150b1e2f4"
+        "outputId": "1327e56d-3fd3-42e0-f5be-e7ee8daf8a91"
       },
-      "execution_count": 15,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,13 +667,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import userdata\n",
+        "#from google.colab import userdata\n",
         "\n",
         "CLIENT_SECRET_FILE = \"client_secret.json\"\n",
         "TOKEN_FILE = \"token.json\"\n",
         "\n",
-        "client_secret = userdata.get(\"YT_CLIENT_SECRET\")\n",
-        "token_secret = userdata.get(\"YT_TOKEN\")\n",
+        "# client_secret = userdata.get(\"YT_CLIENT_SECRET\")\n",
+        "# token_secret = userdata.get(\"YT_TOKEN\")\n",
         "\n",
         "if not client_secret or not token_secret:\n",
         "    raise Exception(\"❌ Missing Colab secrets: YT_CLIENT_SECRET / YT_TOKEN\")\n",
@@ -666,9 +691,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4025c90a-1fdb-4545-d1bd-bb254a414d0d"
+        "outputId": "7bae9a9f-d323-4f36-8fff-61a41c578b9e"
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,9 +714,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8316d72f-6344-4f80-f056-92ec10a8a8d0"
+        "outputId": "46566300-8cc7-457a-8e31-a1c8966475cb"
       },
-      "execution_count": 17,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -774,7 +799,7 @@
       "metadata": {
         "id": "plGulTdNgvYq"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -797,31 +822,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5fbc90f3-f567-41dc-aeb1-5c19659a8728"
+        "outputId": "83bf673d-482a-47fa-9b15-160c952896bd"
       },
-      "execution_count": 19,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "📄 Caption text loaded:\n",
-            " Why do kids hate green food?! 🥦\n",
+            " Fueling festive play with care and goodness ✨🎄\n",
             "\n",
-            "Revant, Little Joys Founder, got real in a recent chat with kids about the biggest mystery 😂👇\n",
+            "Discover Little Joys at the carnival. 🤍🎁\n",
             "\n",
-            "Got a picky eater at home?\n",
-            "\n",
-            "Drop your questions below — we’re answering them! 💬✨\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            ".\n",
-            "[Picky eating, Veggies, Green food, Green vegetables, Leafy vegetables, capsicum, kids nutrition, founder content, viral, trending, feed]\n"
+            "Book your tickets on @districtupdates 🎟️\n"
           ]
         }
       ]
@@ -886,7 +900,7 @@
       "metadata": {
         "id": "Tg4q8qOMpKJs"
       },
-      "execution_count": 20,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -966,7 +980,7 @@
       "metadata": {
         "id": "oCrWM9ikKaiZ"
       },
-      "execution_count": 21,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1001,33 +1015,33 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "f60076d8-c9a6-48ce-aaf1-cd3e29ba1ad6"
+        "outputId": "d8d0d665-fd5a-406f-c508-0ffa5cbd04fb"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "✅ HF Metadata API called successfully\n",
-            "🎬 TITLE: Revant Discusses Why Kids Dislike Green Food #shorts\n",
-            "📝 DESCRIPTION: In our newest YouTube Shorts video, Revant, our founder, tackles the age-old question: why do kids dislike green food? Join us as we explore the reasons behind this common phenomenon and some potentia\n",
-            "🏷️ TAGS: ['kids food', 'why IDislikegreens', 'food trends', 'founder story', 'nutrition', 'parenting', 'family', 'health', 'education', 'cooking']\n",
-            "✅ Uploaded video URL: https://www.youtube.com/watch?v=IgYSJyEov7k\n"
+            "🎬 TITLE: Little Joys Fun: Safe Rides & Games #shorts\n",
+            "📝 DESCRIPTION: Discover the enchantment of Little Joys where laughter and safety unite. Delight in captivating rides and engaging games for precious family moments. Book your tickets today! #familyfun #amusementpark\n",
+            "🏷️ TAGS: ['family fun', 'amusement park', 'rides', 'games', 'safety', 'kids', 'entertainment', 'weekend fun.']\n",
+            "✅ Uploaded video URL: https://www.youtube.com/watch?v=ywNsp1nWiyk\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'IgYSJyEov7k'"
+              "'ywNsp1nWiyk'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 40
         }
       ]
     }
