--- a/ViralLoopYT.ipynb
+++ b/ViralLoopYT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPg7FwAuGab4dZidPXYjO5E",
+      "authorship_tag": "ABX9TyOQikubc40FUS8Ht4SnHpZ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GKTeHaJxp3MM",
-        "outputId": "2a2e0aab-53e4-4c12-aa73-57045dae3451",
+        "outputId": "4222b4d4-bc7b-4a05-a8f4-b930163e18d3",
         "collapsed": true
       },
       "outputs": [
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "vKg7oiPK3Cq2"
       },
-      "execution_count": 25,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "7nUFsvI33emI"
       },
-      "execution_count": 26,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "lCSRNANqsRm9"
       },
-      "execution_count": 27,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "kjlr3nT38l-D"
       },
-      "execution_count": 28,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -321,8 +321,11 @@
         "            os.rename(old_path, os.path.join(\"reels\", new_txt_name))\n",
         "            print(f\"✅ Caption saved as: {new_txt_name}\")\n",
         "\n",
-        "    if not video_path:\n",
-        "        raise Exception(\"Downloaded video file not found\")\n",
+        "    # ✅ HARD SAFETY CHECK (THIS WAS MISSING)\n",
+        "    if not video_path or not os.path.exists(video_path):\n",
+        "        raise FileNotFoundError(\n",
+        "            f\"Downloaded video file not found in reels/. Files: {os.listdir('reels')}\"\n",
+        "        )\n",
         "\n",
         "    # 6️⃣ Mark reel as uploaded in Redis\n",
         "    mark_as_uploaded(selected_post.shortcode)\n",
@@ -330,6 +333,8 @@
         "\n",
         "    duration = get_video_duration(video_path)\n",
         "    return video_path, page, duration\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -344,9 +349,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrBuFNVJrVQ_",
-        "outputId": "598b33d0-d851-479c-d1b1-713739035146"
+        "outputId": "089a157c-d87c-4840-8d1b-7ec3c459959e"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,17 +371,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧠 Redis check DSmeIwbCNoa: 1\n",
-            "⏭️ Skipping already uploaded reel: DSmeIwbCNoa\n",
-            "🧠 Redis check DSrVu0fiBWA: 1\n",
-            "⏭️ Skipping already uploaded reel: DSrVu0fiBWA\n",
             "🧠 Redis check DSfPcT_DKvU: 0\n",
             "🎯 Selected NEW reel: DSfPcT_DKvU\n",
-            "[Fueling festive play with car…] reels/2025-12-20_14-11-45_UTC.mp4 \n",
-            "✅ Caption saved as: caption_20260107_143208.txt\n",
-            "🧠 Saved reel ID to Redis: DSfPcT_DKvU\n",
-            "Downloaded ONE video: reels/reel_20260107_143208.mp4\n",
-            "Reel duration: 32.23 seconds\n"
+            "[Fueling festive play with car…] reels/2025-12-20_14-11-45_UTC.mp4 \n"
           ]
         }
       ]
@@ -390,7 +387,7 @@
       "metadata": {
         "id": "_U2Vw_PcpWgN"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +445,7 @@
       "metadata": {
         "id": "vTPOA4ch0VlY"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +576,7 @@
       "metadata": {
         "id": "GVvo0Gxf0goW"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -644,25 +641,10 @@
         "\n"
       ],
       "metadata": {
-        "id": "yoNyVHRsfeMz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1327e56d-3fd3-42e0-f5be-e7ee8daf8a91"
+        "id": "yoNyVHRsfeMz"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🎬 Merging Voice and Video (HF-powered)...\n",
-            "✅ HF Chat Completion API called successfully\n",
-            "\n",
-            "🏆 SUCCESS: final_short.mp4 generated with transparent emoji watermark.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -687,22 +669,10 @@
         "print(\"✅ Secrets restored from Colab userdata\")\n"
       ],
       "metadata": {
-        "id": "yZH4jfv3V9Fr",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7bae9a9f-d323-4f36-8fff-61a41c578b9e"
+        "id": "yZH4jfv3V9Fr"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Secrets restored from Colab userdata\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -710,43 +680,10 @@
         "!pip install google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2\n"
       ],
       "metadata": {
-        "id": "kUqflhrqYmoZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "46566300-8cc7-457a-8e31-a1c8966475cb"
+        "id": "kUqflhrqYmoZ"
       },
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: google-api-python-client in /usr/local/lib/python3.12/dist-packages (2.187.0)\n",
-            "Requirement already satisfied: google-auth in /usr/local/lib/python3.12/dist-packages (2.43.0)\n",
-            "Requirement already satisfied: google-auth-oauthlib in /usr/local/lib/python3.12/dist-packages (1.2.2)\n",
-            "Requirement already satisfied: google-auth-httplib2 in /usr/local/lib/python3.12/dist-packages (0.2.1)\n",
-            "Requirement already satisfied: httplib2<1.0.0,>=0.19.0 in /usr/local/lib/python3.12/dist-packages (from google-api-python-client) (0.31.0)\n",
-            "Requirement already satisfied: google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5 in /usr/local/lib/python3.12/dist-packages (from google-api-python-client) (2.28.1)\n",
-            "Requirement already satisfied: uritemplate<5,>=3.0.1 in /usr/local/lib/python3.12/dist-packages (from google-api-python-client) (4.2.0)\n",
-            "Requirement already satisfied: cachetools<7.0,>=2.0.0 in /usr/local/lib/python3.12/dist-packages (from google-auth) (6.2.4)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.12/dist-packages (from google-auth) (0.4.2)\n",
-            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.12/dist-packages (from google-auth) (4.9.1)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.12/dist-packages (from google-auth-oauthlib) (2.0.0)\n",
-            "Requirement already satisfied: googleapis-common-protos<2.0.0,>=1.56.2 in /usr/local/lib/python3.12/dist-packages (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (1.72.0)\n",
-            "Requirement already satisfied: protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<7.0.0,>=3.19.5 in /usr/local/lib/python3.12/dist-packages (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (5.29.5)\n",
-            "Requirement already satisfied: proto-plus<2.0.0,>=1.22.3 in /usr/local/lib/python3.12/dist-packages (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (1.26.1)\n",
-            "Requirement already satisfied: requests<3.0.0,>=2.18.0 in /usr/local/lib/python3.12/dist-packages (from google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (2.32.4)\n",
-            "Requirement already satisfied: pyparsing<4,>=3.0.4 in /usr/local/lib/python3.12/dist-packages (from httplib2<1.0.0,>=0.19.0->google-api-python-client) (3.2.5)\n",
-            "Requirement already satisfied: pyasn1<0.7.0,>=0.6.1 in /usr/local/lib/python3.12/dist-packages (from pyasn1-modules>=0.2.1->google-auth) (0.6.1)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.12/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib) (3.3.1)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.0,<3.0.0,>=1.31.5->google-api-python-client) (2025.11.12)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -799,7 +736,7 @@
       "metadata": {
         "id": "plGulTdNgvYq"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -818,27 +755,10 @@
         "print(\"📄 Caption text loaded:\\n\", CAPTION_TEXT)\n"
       ],
       "metadata": {
-        "id": "SjqUdqosFpqs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "83bf673d-482a-47fa-9b15-160c952896bd"
+        "id": "SjqUdqosFpqs"
       },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "📄 Caption text loaded:\n",
-            " Fueling festive play with care and goodness ✨🎄\n",
-            "\n",
-            "Discover Little Joys at the carnival. 🤍🎁\n",
-            "\n",
-            "Book your tickets on @districtupdates 🎟️\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -900,7 +820,7 @@
       "metadata": {
         "id": "Tg4q8qOMpKJs"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -980,7 +900,7 @@
       "metadata": {
         "id": "oCrWM9ikKaiZ"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1010,40 +930,10 @@
         ")\n"
       ],
       "metadata": {
-        "id": "zdu2KRWNpWMr",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 142
-        },
-        "outputId": "d8d0d665-fd5a-406f-c508-0ffa5cbd04fb"
+        "id": "zdu2KRWNpWMr"
       },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ HF Metadata API called successfully\n",
-            "🎬 TITLE: Little Joys Fun: Safe Rides & Games #shorts\n",
-            "📝 DESCRIPTION: Discover the enchantment of Little Joys where laughter and safety unite. Delight in captivating rides and engaging games for precious family moments. Book your tickets today! #familyfun #amusementpark\n",
-            "🏷️ TAGS: ['family fun', 'amusement park', 'rides', 'games', 'safety', 'kids', 'entertainment', 'weekend fun.']\n",
-            "✅ Uploaded video URL: https://www.youtube.com/watch?v=ywNsp1nWiyk\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'ywNsp1nWiyk'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 40
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
